--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "dupe-file",
 	"displayName": "Dupe File",
 	"description": "Duplicate files from the file context menu. Makes a copy of the file in the same location simlilar to macOS's Finder context menu.",
-	"version": "1.0.0",
-	"publisher": "mike gieson",
+	"version": "1.0.1",
+	"publisher": "gieson",
 	"license": "MIT",
 	"engines": {
 		"vscode": "^1.13.0"
@@ -69,8 +69,8 @@
 	},
 	"scripts": {},
 	"__metadata": {
-		"id": "03944bdc-9bcb-4ac2-b9b3-fdb050dd43ff",
-		"publisherId": "c958976e-9702-4f1a-8bdf-26b7bc012dff",
-		"publisherDisplayName": "mike gieson"
+		"id": "gieson",
+		"publisherId": "",
+		"publisherDisplayName": "michael gieson"
 	}
 }
